[package]
name = "tdd-ccd-endpoint-rs"
version = "0.1.1"
authors = ["Ralf Waldvogel <ralf.waldvogel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2", features=[] }
actix-rt = "1"
serde = ""
serde_json = ""
env_logger = ""
log = ""
# futures-timer = ""
# rand = ""

[dev-dependencies]
